--- a/FleetUnits/mssql@.service
+++ b/FleetUnits/mssql@.service
@@ -8,7 +8,7 @@ TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker kill MSSQL
 ExecStartPre=-/usr/bin/docker rm MSSQL
 ExecStartPre=/usr/bin/docker pull microsoft/mssql-server-linux
-ExecStart=/usr/bin/docker run -e 'ACCEPT_EULA=Y' -e 'SA_PASSWORD=yourStrong(!)Password' -p 1433:1433 -v /mnt/mssql/:/var/opt/mssql -d microsoft/mssql-server-linux
+ExecStart=/usr/bin/docker run --rm --name MSSQL -e 'ACCEPT_EULA=Y' -e 'SA_PASSWORD=yourStrong(!)Password' -p 1433:1433 -v /mnt/mssql/:/var/opt/mssql -d microsoft/mssql-server-linux
 ExecStop=/usr/bin/docker stop MSSQL
 
 [X-Fleet]
