--- a/FleetUnits/mysql@.service
+++ b/FleetUnits/mysql@.service
@@ -8,7 +8,7 @@ TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker kill mysql
 ExecStartPre=-/usr/bin/docker rm mysql
 ExecStartPre=/usr/bin/docker pull mysql
-ExecStart=/usr/bin/docker run --rm --name mysql -p 3306:3306 -e MYSQL_ROOT_PASSWORD=AV3ryStr0ngP4ssw0rd!@ -d mysql
+ExecStart=/usr/bin/docker run --rm --name mysql -p 3306:3306 -e MYSQL_ROOT_PASSWORD=AV3ryStr0ngP4ssw0rd!@ mysql
 ExecStop=/usr/bin/docker stop mysql
 
 [X-Fleet]
