--- a/Kubernetes/PersistantVolumeClaims/NFS-PerconaStorage-Claim.yaml
+++ b/Kubernetes/PersistantVolumeClaims/NFS-PerconaStorage-Claim.yaml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: nfs
+  name: PerconaStorageClaim
 spec:
   accessModes:
     - ReadWriteMany
