--- a/Kubernetes/PersistantVolumeClaims/NFS-PerconaStorage-Claim.yaml
+++ b/Kubernetes/PersistantVolumeClaims/NFS-PerconaStorage-Claim.yaml
@@ -1,10 +1,10 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: PerconaStorageClaim
+  name: perconastorageclaim
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-storage: 200Gi
+      storage: 200Gi
