--- a/Kubernetes/PersistantVolumes/NFS-PerconaStorage.yaml
+++ b/Kubernetes/PersistantVolumes/NFS-PerconaStorage.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: PerconaStorageClaim
+  name: perconastorageclaim
 spec:
   capacity:
     storage: 200Gi
@@ -10,4 +10,4 @@ spec:
   nfs:
     # FIXME: use the right IP
     server: 10.99.0.10
-path: "/nfs-shares/PerconaCluster"
+    path: "/nfs-shares/PerconaCluster"
