--- a/Kubernetes/Services/Quassel-Service.yaml
+++ b/Kubernetes/Services/Quassel-Service.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: Service
-metadata:
+metadata: 
   name: quassel-core
 spec:
+  type: NodePort
   ports:
     # the port that this service should serve on
     - port: 4242
       protocol: TCP
-      targetPort: 4242
+      nodePort: 30001
   # label keys and values that must match in order to receive traffic for this service
   selector:
     name: quassel-core
