--- a/CI-CD/Drone/docker-compose.yml
+++ b/CI-CD/Drone/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   drone-server:
-    image: drone/drone:latest
+    image: drone/drone:0.7.3
     ports:
       - 80:8000
     volumes:
@@ -19,7 +19,7 @@ services:
       - DRONE_SECRET=DroneSecret
 
   drone-agent:
-    image: drone/drone:latest
+    image: drone/drone:0.7.3
     command: agent
     restart: on-failure
     depends_on: [ drone-server ]
