--- a/CI-CD/Drone/docker-compose.yml
+++ b/CI-CD/Drone/docker-compose.yml
@@ -2,9 +2,10 @@ version: '3'
 
 services:
   drone-server:
-    image: drone/drone:0.7.3
+    image: drone/drone:latest
     ports:
       - 80:8000
+      - 9000:9000
     volumes:
       - /storage/Drone:/var/lib/drone/
     restart: on-failure
@@ -19,7 +20,7 @@ services:
       - DRONE_SECRET=DroneSecret
 
   drone-agent:
-    image: drone/drone:0.7.3
+    image: drone/drone:latest
     command: agent
     restart: on-failure
     depends_on: [ drone-server ]
@@ -27,4 +28,5 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - DRONE_SERVER=ws://drone-server:8000/ws/broker
+      - DRONE_SERVER=drone-server:9000
       - DRONE_SECRET=DroneSecret
