--- a/CI-CD/Registry/docker-compose.yml
+++ b/CI-CD/Registry/docker-compose.yml
@@ -28,4 +28,4 @@ services:
       - registry-server:registry-server
     environment:
       - REGISTRY_URL=http://registry-server:5000/v2
-      - REGISTRY_NAME=registry.dev.airwallex.awx:5000
+      - REGISTRY_NAME=registry.setkeh.com:5000
