--- a/CI-CD/Registry/docker-compose.yml
+++ b/CI-CD/Registry/docker-compose.yml
@@ -31,5 +31,5 @@ services:
       - registry-server:registry-server
     environment:
       - REGISTRY_URL=https://registry-server:5000/v2
-      - REGISTRY_NAME=https://registry.setkeh.com:5000
+      - REGISTRY_NAME=registry.setkeh.com:5000
       - REGISTRY_TRUST_ANY_SSL=true
